# SpinnyBall

./: .gitignore  BENCHMARKS.md  BUG_HUNT_ANALYSIS.md  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  MISSION_LEVEL_ANALYSIS.md  README.md  RESEARCH_SUMMARY.md  ROOT_CAUSE_FIXES.md  SCIENTIFIC_RIGOR_PLAN.md  SECURITY.md  anchor_calibration.json  anchor_experiments.json  anchor_profiles.json  backgroundinfo.txt  comprehensive_sweep_campaign.py  digital_twin.html  environment_profiles.json  extended_velocity_sweep.py  extended_velocity_sweep_20260428-214424.json  extended_velocity_sweep_20260428-214919.json  extended_velocity_sweep_20260501-074347.json  generate_lob_plot.py  generate_paper_plots.py  generate_t3_plots.py  geometry_profiles.json  health_check.ps1  index.html  lob_scaling.py  metabolic_yield.py  optimal_parameters.json  preflight_validation.py  profile_sweep_parallel.py  pyproject.toml  quick_energy_analysis.py  quick_profile_sweep.py  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md
archived_edt/: edt_controller.py  edt_packet.py  electrodynamic_tether.py  electrodynamic_tethers.md  oml_current.py  phase4_scrutiny_and_revised_plan.md  test_edt_controller.py  test_edt_dynamics.py  test_edt_packet.py  test_thermionic_emission.py  thermionic_emission.py
backend/: __init__.py  app.py  logging_config.py  ml_integration.py
background/: BACKGROUND_CLEAN.md  BACKGROUND_ORIGINAL.md  external_data_requirements.md  ideal_blueprint_alignment.md  implementation_roadmap.md  phase1_completion_plan.md  phase3_execution_plan.md  physics_simulator_audit.md  post_mortem_analysis.md  priority_analysis.md  production_gap_analysis.md  special_maneuver_analysis.md  station_keeping_analysis.md
config/: ml_config.json
control/: __init__.py  mpc_controller.py  rom_predictor.py  vmd_ircnn_stub.py
control_layer/: __init__.py  anomaly_detector.py  data_generator.py  data_quality.py  drift_balance_sensor.py  failure_modes.py  ircnn_predictor.py  ml_integration.py  mpc_controller.py  rom_predictor.py  state_converter.py  stream_balance.py  train_vmd_enhanced.py  training_data_generator.py  training_pipeline.py  vmd_decomposition.py  vmd_enhanced_stub.py  vmd_ircnn_stub.py
data/: prediction_val.npz  wobble_val.npz
docs/: CONTROL_THERMAL_PERFORMANCE.md  DATA_REPORT.md  DEPENDENCIES.md  PARAMETER_REFERENCE.md  RESEARCH_DATASET.md  T1_OPTIMIZATION_PLAN.txt  TECHNICAL_SPEC.md  anchor-validation-decision.md  paper_findings.md  paper_manuscript.md  phase1_integration_architecture.md  phase3_api_reference.md  phase3_integration_report.md  thermal_model_validation_report.md  unified_geometry_table.md
dynamics/: __init__.py  alternatives_comparison.py  bean_london_model.py  coil_switching.py  cryocooler_model.py  debris_risk.py  earth_moon_pumping.py  earth_moon_pumping_simple.py  energy_injection.py  flux_gyroscopic_dynamics.py  gdBCO_material.py  gravity_slingshot.py  gyro_matrix.py  (+20 more)
(+1369 files in other folders)
